--- a/views/creativeWorks/movie/add.ejs
+++ b/views/creativeWorks/movie/add.ejs
@@ -1,23 +1,20 @@
 <%- contentFor('title') %>
-映画作品マスタ登録
+作品登録
 <%- contentFor('displayId') %>
 Aa-9
 <%- contentFor('styles') %>
 
 <%- contentFor('scripts') %>
-<script src="/js/master/creativeWorks/movieForm.js"></script>
+
+
 
 <%- contentFor('body') %>
 <div class="col-sm-12 form-container">
     <% /* フォーム */ %>
     <form method="post" class="form-horizontal">
         <div class="menu-group">
-            <% /* メッセージ */ %>
-            <% if (message !== '') { %>
-            <p class="error message text-danger panel-body bg-danger">
-                <%= message %>
-            </p>
-            <% } %>
+            <%- include('../../common/errorMessage') %>
+            <%- include('../../common/successMessage') %>
         </div>
         <% /* 作品コード */ %>
         <div class="form-group ">
@@ -50,3 +47,14 @@ Aa-9
         </div>
     </form>
 </div>
+<script>
+    $(function () {
+        $('.btn-ok').on('click', function () {
+            $('form').submit();
+        });
+        // datepickerセット
+        $('.datepicker').datepicker({
+            language: 'ja'
+        })
+    });
+</script>
