--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -69,21 +69,13 @@ Aa-11
                         <br> $reservationFor.location.name.ja$
                         <br>
                     </td>
-                    <td name="reservedTicket.ticketType.name.ja__reservedTicket.ticketType.priceSpecification.price__reservedTicket.ticketType.priceSpecification.priceCurrency__reservedTicket.ticketType.priceSpecification.referenceQuantity.value__reservedTicket.ticketedSeat.seatSection__reservedTicket.ticketedSeat.seatNumber">
-                        $reservedTicket.ticketType.name.ja$
-                        <br>$reservedTicket.ticketType.priceSpecification.price$
-                        $reservedTicket.ticketType.priceSpecification.priceCurrency$ /
-                        $reservedTicket.ticketType.priceSpecification.referenceQuantity.value$
-                        <br>$reservedTicket.ticketedSeat.seatSection$
-                        <br>$reservedTicket.ticketedSeat.seatNumber$
+                    <td name="reservedTicket.ticketType.name.ja__reservedTicket.ticketType.price__reservedTicket.ticketedSeat.seatSection__reservedTicket.ticketedSeat.seatNumber">
+                        $reservedTicket.ticketType.name.ja$<br> $reservedTicket.ticketType.price$ JPY<br>
+                        $reservedTicket.ticketedSeat.seatSection$
+                        <br> $reservedTicket.ticketedSeat.seatNumber$
                     </td>
-                    <td name="underName.typeOf__underName.name__underName.givenName__underName.familyName__underName.email__underName.telephone">
-                        <span class="badge">$underName.typeOf$</span>
-                        <br>$underName.name$
-                        <br>$underName.givenName$
-                        <br>$underName.familyName$
-                        <br>$underName.email$
-                        <br>$underName.telephone$
+                    <td name="underName.typeOf__underName.name">
+                        <span class="badge">$underName.typeOf$</span><br> $underName.name$
                     </td>
                 </tr>
             </tbody>
