--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,14 +45,24 @@ header .title {
   margin: 0 auto;
   overflow: auto;
   width: 100%;
-  height: 500px; }
+  overflow-x: auto;
+  border: 2px solid #ccc; }
+  .scheduler .scrollable-body {
+    height: 480px;
+    overflow: auto;
+    width: max-content;
+    min-width: 100%; 
+  }
   .scheduler table {
     min-width: 100%;
-    border-collapse: collapse;
-    border: 2px solid #ccc; }
+    border-collapse: collapse; }
   .scheduler td {
     border-right: 1px solid #ccc;
     border-left: 1px solid #ccc; }
+    .scheduler td:first-child {
+      border-left: 0px; }
+    .scheduler td:last-child {
+      border-right: 0px; }
   .scheduler .header {
     text-align: center;
     font-size: 12px;
@@ -80,6 +90,12 @@ header .title {
       .scheduler .performance .inner:hover {
         transition: all 0.2s;
         background-color: #a7dbff; }
+    .scheduler .performance.overlap .inner {
+      border: 1px solid #ffa7a7;
+      background-color: #ffd5d5; }
+      .scheduler .performance.overlap .inner:hover {
+        transition: all 0.2s;
+        background-color: #ffa7a7; }
 
 .performance-edit-modal td {
   padding: 10px; }
@@ -89,3 +105,25 @@ header .title {
   .performance-edit-modal .screening-time select {
     display: inline-block;
     width: auto; }
+
+.search .form-group {
+  margin-right: 20px; }
+  
+.btn-disabled {
+  cursor: default;
+  pointer-events: none;
+  color: #b6b6b6!important;
+  border: 1px solid;
+  border-color: #b6b6b6!important;
+  background-color: #eee!important;
+  box-shadow: none;
+}
+
+.btn-disabled, .btn-cancel {
+  width: 100px;
+}
+
+#startDateTime select {
+  width: 50px;
+  display: inline-block;
+}
