--- a/views/accountTitles/add.ejs
+++ b/views/accountTitles/add.ejs
@@ -11,12 +11,8 @@ Aa-16
     <% /* フォーム */ %>
     <form method="post" class="form-horizontal">
         <div class="menu-group">
-            <% /* メッセージ */ %>
-            <% if (message !== '') { %>
-            <p class="error message text-danger panel-body bg-danger">
-                <%= message %>
-            </p>
-            <% } %>
+            <%- include('../common/errorMessage') %>
+            <%- include('../common/successMessage') %>
         </div>
 
         <% /* 登録・更新共通部 */ %>
