--- a/views/creativeWorks/movie/form.ejs
+++ b/views/creativeWorks/movie/form.ejs
@@ -15,8 +15,24 @@
     </div>
 </div>
 <div class="form-group">
+    <label class="col-sm-3 control-label label-title" for="headline">
+        サブタイトル
+    </label>
+    <div class="col-sm-9">
+        <input class="form-control" name="headline" id="headline" placeholder="" maxlength=64 value="<%= forms.headline %>">
+        <p class="message">
+            全角64文字以内でご入力ください。
+        </p>
+        <p class="error message text-danger">
+            <% if (errors && errors.headline) { %>
+            <%- errors.headline.msg %>
+            <% } %>
+        </p>
+    </div>
+</div>
+<div class="form-group">
     <label for="duration" class="col-sm-3 control-label label-title">
-        上映時間<font color="red">＊</font>
+        上映時間
     </label>
     <div class="col-sm-9">
         <input class="form-control" style="width:30%;display:inline-block;" name="duration" id="duration" placeholder=""
@@ -39,14 +55,14 @@
     <div class="col-sm-9">
         <%
             let ratings = [
-                {code: 'G', name: {ja: 'なし', en:'General Audience'}},
+                {code: '', name: {ja: 'なし', en:'None'}},
+                {code: 'G', name: {ja: 'General', en:'General'}},
                 {code: 'PG12', name: {ja: 'PG-12指定', en:'PG-12'}},
                 {code: 'R15+', name: {ja: 'R-15指定', en:'R-15'}},
                 {code: 'R18+', name: {ja: 'R-18指定', en:'R-18'}}
             ];
         %>
         <select name="contentRating" id="contentRating" class="form-control">
-            <option value="">---</option>
             <% for (let rating of ratings) { %>
             <option value="<%= rating.code %>" <% if (forms.contentRating===rating.code) { %> selected="selected"
                 <% } %>>
@@ -63,18 +79,18 @@
 </div>
 <div class="form-group">
     <label class="col-sm-3 control-label label-title" for="datePublished">
-        公開日時
+        公開日
     </label>
     <div class="col-sm-9">
-        <input type="text" class="form-control datetimepicker" name="datePublished" id="datePublished" value="<%= forms.datePublished %>">
+        <input class="form-control datepicker" name="datePublished" autocomplete="off" id="datePublished" value="<%= forms.datePublished %>">
     </div>
 </div>
 <div class="form-group">
     <label class="col-sm-3 control-label label-title" for="offers[availabilityEnds]">
-        興行終了予定日時
+        興行終了予定日
     </label>
     <div class="col-sm-9">
-        <input type="text" class="form-control datetimepicker" name="offers[availabilityEnds]" id="offers[availabilityEnds]"
+        <input class="form-control datepicker" name="offers[availabilityEnds]" autocomplete="off" id="offers[availabilityEnds]"
             value="<%= (forms.offers !== undefined) ? forms.offers.availabilityEnds : '' %>">
     </div>
 </div>
