--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -1,135 +1,153 @@
 <div class="modal fade" id="newModal" tabindex="-1">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-                <h4 class="modal-title">パフォーマンス新規登録</h4>
+                <h4 class="modal-title">スケジュール新規登録</h4>
             </div>
             <div class="modal-body">
                 <div class="panel-body">
                     <form class="form-horizontal">
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label" for="screeningEventIdentifier">作品コード</label>
+                        <div class="form-group form-inline">
+                            <label class="col-sm-3 control-label text-right" for="theater">劇場<font color="red">＊</font></label>
                             <div class="col-sm-9 form-inline">
-                                <input type="text" class="form-control" name="screeningEventIdentifier" placeholder="作品コード">
-                                <button type="button" class="btn btn-default film-search-button">検索</button>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-9 form-inline">
-                                <select class="form-control" name="screeningEventSeriesId">
-                                </select>
-                            </div>
-                        </div>
-                        <button type="button" class="btn btn-primary film-select-button">作品を確定</button>
-                    </form>
-                </div>
-                <div class="panel-body">
-                    <form class="form-horizontal">
-                        <ul class="list-group">
-                            <li class="list-group-item theater">劇場 : <span></span></li>
-                            <li class="list-group-item day">上映日 : <span></span></li>
-                        </ul>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label" for="doorTime">開場時間</label>
-                            <div class="col-sm-9 form-inline">
-                                <select class="form-control" name="doorTimeHour">
-                                    <% for (let i = 0; i < 24; i++) { %>
-                                    <% let hour = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= hour %>">
-                                        <%= hour %>
+                                <select class="form-control" name="theater">
+                                    <option value="" disabled selected>選択してください</option>
+                                    <% for (const movieTheater of movieTheaters) { %>
+                                    <option value="<%= movieTheater.branchCode %>" data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
+                                        data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
+                                        data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>">
+                                        <%= movieTheater.name.ja %>
                                     </option>
                                     <% } %>
                                 </select>
-                                時
-                                <select class="form-control" name="doorTimeMinutes">
-                                    <% for (let i = 0; i < 60; i++) { %>
-                                    <% let minutes = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= minutes %>">
-                                        <%= minutes %>
-                                    </option>
-                                    <% } %>
-                                </select>
-                                分
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label" for="startTime">開始時間</label>
-                            <div class="col-sm-9 form-inline">
-                                <select class="form-control" name="startTimeHour">
-                                    <% for (let i = 0; i < 24; i++) { %>
-                                    <% let hour = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= hour %>">
-                                        <%= hour %>
-                                    </option>
-                                    <% } %>
-                                </select>
-                                時
-                                <select class="form-control" name="startTimeMinutes">
-                                    <% for (let i = 0; i < 60; i++) { %>
-                                    <% let minutes = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= minutes %>">
-                                        <%= minutes %>
-                                    </option>
-                                    <% } %>
-                                </select>
-                                分
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label" for="endTime">終了時間</label>
-                            <div class="col-sm-9 form-inline">
-                                <select class="form-control" name="endTimeHour">
-                                    <% for (let i = 0; i < 24; i++) { %>
-                                    <% let hour = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= hour %>">
-                                        <%= hour %>
-                                    </option>
-                                    <% } %>
-                                </select>
-                                時
-                                <select class="form-control" name="endTimeMinutes">
-                                    <% for (let i = 0; i < 60; i++) { %>
-                                    <% let minutes = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= minutes %>">
-                                        <%= minutes %>
-                                    </option>
-                                    <% } %>
-                                </select>
-                                分
                             </div>
                         </div>
                         <div class="form-group form-inline">
-                            <label class="col-sm-3 control-label" for="screen">スクリーン</label>
-                            <div class="col-sm-9">
-                                <select class="form-control" name="screen"></select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-sm-12" for="ticketTypeGroup">券種グループ</label>
-                            <div class="col-sm-12">
-                                <select class="form-control" name="ticketTypeGroup"></select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-sm-12" for="eventStatus">イベントステータス</label>
-                            <div class="col-sm-12">
-                                <select class="form-control" name="eventStatus">
-                                    <option value="">選択してください</option>
-                                    <% Object.keys(EventStatusType).forEach((key) => { %>
-                                    <option value="<%= EventStatusType[key] %>">
-                                        <%= EventStatusType[key] %>
-                                    </option>
-                                    <% }) %>
+                            <label class="col-sm-3 control-label text-right" for="screen">作品<font color="red">＊</font></label>
+                            <div class="col-sm-9 form-inline">
+                                <select class="form-control" name="screeningEventSeriesId">
+                                    <option value="">劇場を選択してください</option>
                                 </select>
                             </div>
                         </div>
+                        <div class="form-group form-inline">
+                            <label class="col-sm-3 control-label text-right" for="screen">スクリーン<font color="red">＊</font></label>
+                            <div class="col-sm-9">
+                                <select class="form-control" name="screen">
+                                    <option value="">劇場を選択してください</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label text-right">登録期間<font color="red">＊</font></label>
+                            <div class="col-sm-9 form-inline">
+                                <input class="form-control datepicker" name="screeningDateStart" placeholder="YYYY/MM/DD"
+                                    maxlength=10>
+                                〜
+                                <input class="form-control datepicker" name="screeningDateThrough" placeholder="YYYY/MM/DD"
+                                    maxlength=10>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label text-right">曜日<font color="red">＊</font></label>
+                            <div class="col-sm-9 form-inline">
+                                <label class="checkbox-inline"><input type="checkbox" value="1" name="weekDay" checked>月</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="2" name="weekDay" checked>火</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="3" name="weekDay" checked>水</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="4" name="weekDay" checked>木</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="5" name="weekDay" checked>金</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="6" name="weekDay" checked>土</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="0" name="weekDay" checked>日</label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label text-right" for="onlineDisplayStartDate">オンライン表示開始日</label>
+                            <div class="col-sm-9 form-inline">
+                                <input class="form-control datepicker" name="onlineDisplayStartDate" placeholder="YYYY/MM/DD"
+                                    maxlength=10>
+                            </div>
+                        </div>
+                        <table class="table table-bordered">
+                            <thead>
+                                <th class="text-center">パフォマンス</th>
+                                <th class="text-center">開場時刻</th>
+                                <th class="text-center">開始時刻</th>
+                                <th class="text-center">終了時刻</th>
+                                <th class="text-center">券種グループ</th>
+                                <th class="text-center mvtk" style="max-width: 80px">ムビチケ対象外</th>
+                            </thead>
+                            <tbody>
+                                <% for (let i = 1; i <= 6; i++) { %>
+                                <tr>
+                                    <td class="text-center">
+                                        <%= i %>
+                                    </td>
+                                    <td class="form-inline">
+                                        <%- include('../../common/part/_timeSelector', {
+                                            hourName: 'doorTimeHour',
+                                            minuteName: 'doorTimeMinute'
+                                        }) %>
+                                    </td>
+                                    <td class="form-inline">
+                                        <div class="col-sm-12">
+                                            <%- include('../../common/part/_timeSelector', {
+                                            hourName: 'startTimeHour',
+                                            minuteName: 'startTimeMinute'
+                                        }) %>
+                                        </div>
+                                    </td>
+                                    <td class="form-inline">
+                                        <div class="col-sm-12">
+                                            <%- include('../../common/part/_timeSelector', {
+                                            hourName: 'endTimeHour',
+                                            minuteName: 'endTimeMinute'
+                                        }) %>
+                                        </div>
+                                    </td>
+                                    <td class="form-inline">
+                                        <select class="form-control" name="ticketTypeGroup">
+                                            <option value="" disabled selected>選択してください</option>
+                                            <% for (ticketType of ticketGroups) { %>
+                                            <option value="<%= ticketType.id %>">
+                                                <%= ticketType.name.ja %>
+                                            </option>
+                                            <% } %>
+                                        </select>
+                                    </td>
+                                    <td class="form-inline text-center mvtk">
+                                        <input type="checkbox" name="mvtkExcludeFlg">
+                                    </td>
+                                </tr>
+                                <% } %>
+                            </tbody>
+                        </table>
+                        <!-- <div class="form-group">
+                            <%- include('../../common/part/_timeSelector', {
+                                label: '開場時刻',
+                                hourName: 'doorTimeHour',
+                                minuteName: 'doorTimeMinutes'
+                            }) %>
+                        </div>
+                        <div class="form-group">
+                            <%- include('../../common/part/_timeSelector', {
+                                label: '開始時刻',
+                                hourName: 'startTimeHour',
+                                minuteName: 'startTimeMinutes'
+                            }) %>
+                        </div>
+                        <div class="form-group">
+                            <%- include('../../common/part/_timeSelector', {
+                                label: '終了時刻',
+                                hourName: 'endTimeHour',
+                                minuteName: 'endTimeMinutes'
+                            }) %>
+                        </div> -->
                     </form>
                 </div>
             </div>
-            <input type="hidden" name="screeningEventId" value="">
-            <input type="hidden" name="theater" value="">
-            <input type="hidden" name="day" value="">
+            <input type="hidden" name="maxSeatNumber" value="">
+            <input type="hidden" name="saleStartDays" value="">
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
                 <button type="button" class="btn btn-primary regist-button">パフォーマンスを登録</button>
