--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-                <h4 class="modal-title">パフォーマンス編集</h4>
+                <h4 class="modal-title">スケジュール編集</h4>
             </div>
             <div class="modal-body">
                 <div class="panel-body">
@@ -14,72 +14,30 @@
                             <li class="list-group-item day">上映日 : <span></span></li>
                         </ul>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label" for="doorTime">開場時間</label>
+                            <label class="col-sm-3 control-label" for="doorTime">開場時刻</label>
                             <div class="col-sm-9 form-inline">
-                                <select class="form-control" name="doorTimeHour">
-                                    <% for (let i = 0; i < 24; i++) { %>
-                                    <% let hour = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= hour %>">
-                                        <%= hour %>
-                                    </option>
-                                    <% } %>
-                                </select>
-                                時
-                                <select class="form-control" name="doorTimeMinutes">
-                                    <% for (let i = 0; i < 60; i++) { %>
-                                    <% let minutes = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= minutes %>">
-                                        <%= minutes %>
-                                    </option>
-                                    <% } %>
-                                </select>
-                                分
+                                <%- include('../../common/part/_timeSelector', {
+                                    hourName: 'doorTimeHour',
+                                    minuteName: 'doorTimeMinutes'
+                                }) %>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label" for="startTime">開始時間</label>
+                            <label class="col-sm-3 control-label" for="startTime">開始時刻</label>
                             <div class="col-sm-9 form-inline">
-                                <select class="form-control" name="startTimeHour">
-                                    <% for (let i = 0; i < 24; i++) { %>
-                                    <% let hour = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= hour %>">
-                                        <%= hour %>
-                                    </option>
-                                    <% } %>
-                                </select>
-                                時
-                                <select class="form-control" name="startTimeMinutes">
-                                    <% for (let i = 0; i < 60; i++) { %>
-                                    <% let minutes = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= minutes %>">
-                                        <%= minutes %>
-                                    </option>
-                                    <% } %>
-                                </select>
-                                分
+                                <%- include('../../common/part/_timeSelector', {
+                                    hourName: 'startTimeHour',
+                                    minuteName: 'startTimeMinutes'
+                                }) %>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label" for="endTime">終了時間</label>
+                            <label class="col-sm-3 control-label" for="endTime">終了時刻</label>
                             <div class="col-sm-9 form-inline">
-                                <select class="form-control" name="endTimeHour">
-                                    <% for (let i = 0; i < 24; i++) { %>
-                                    <% let hour = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= hour %>">
-                                        <%= hour %>
-                                    </option>
-                                    <% } %>
-                                </select>
-                                時
-                                <select class="form-control" name="endTimeMinutes">
-                                    <% for (let i = 0; i < 60; i++) { %>
-                                    <% let minutes = ('00' + String(i)).slice(-2); %>
-                                    <option value="<%= minutes %>">
-                                        <%= minutes %>
-                                    </option>
-                                    <% } %>
-                                </select>
-                                分
+                                <%- include('../../common/part/_timeSelector', {
+                                    hourName: 'endTimeHour',
+                                    minuteName: 'endTimeMinutes'
+                                }) %>
                             </div>
                         </div>
                         <div class="form-group form-inline">
@@ -91,46 +49,51 @@
                         <div class="form-group">
                             <label class="control-label col-sm-12" for="ticketTypeGroup">券種グループ</label>
                             <div class="col-sm-12">
-                                <select class="form-control" name="ticketTypeGroup"></select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-sm-12" for="eventStatus">イベントステータス</label>
-                            <div class="col-sm-12">
-                                <select class="form-control" name="eventStatus">
+                                <select class="form-control" name="ticketTypeGroup">
                                     <option value="">選択してください</option>
-                                    <% Object.keys(EventStatusType).forEach((key) => { %>
-                                    <option value="<%= EventStatusType[key] %>">
-                                        <%= EventStatusType[key] %>
+                                    <% for (ticketType of ticketGroups) { %>
+                                    <option value="<%= ticketType.id %>">
+                                        <%= ticketType.name.ja %>
                                     </option>
-                                    <% }) %>
+                                    <% } %>
                                 </select>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label" for="offers[validFrom]">販売開始日時</label>
+                            <label class="col-sm-3 control-label" for="saleStartDate">販売開始日</label>
                             <div class="col-sm-9 form-inline">
-                                <div class="input-group">
-                                    <input type="text" class="form-control datetimepicker" name="offers[validFrom]" id="offers[validFrom]" />
-                                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                                </div>
+                                <input class="form-control datepicker" name="saleStartDate" placeholder="YYYY/MM/DD"
+                                    maxlength=10>
+                                日
+                                <%- include('../../common/part/_timeSelector', {
+                                    hourName: 'saleStartDateHour',
+                                    minuteName: 'saleStartDateMinutes'
+                                }) %>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label" for="offers[availabilityStarts]">情報提供開始日時</label>
+                            <label class="col-sm-3 control-label" for="onlineDisplayStartDate">オンライン表示開始日</label>
                             <div class="col-sm-9 form-inline">
-                                <div class="input-group">
-                                    <input type="text" class="form-control datetimepicker" name="offers[availabilityStarts]"
-                                        id="offers[availabilityStarts]" />
-                                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                                </div>
+                                <input class="form-control datepicker" name="onlineDisplayStartDate" placeholder="YYYY/MM/DD"
+                                    maxlength=10>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label" for="offers[eligibleQuantity][maxValue]">注文上限数</label>
+                            <label class="col-sm-3 control-label" for="maxSeatNumber">上限枚数</label>
                             <div class="col-sm-9 form-inline">
-                                <input class="form-control" type="number" name="offers[eligibleQuantity][maxValue]"
-                                    placeholder="1" maxlength=10>
+                                <input class="form-control" type="number" name="maxSeatNumber" maxlength=10>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="name" class="col-sm-3 control-label label-title">
+                            </label>
+                            <div class="col-sm-9">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="mvtkExcludeFlg" value="1" id="mvtkExcludeFlg">
+                                    <label class="form-check-label" for="mvtkExcludeFlg">
+                                        ムビチケ対象外
+                                    </label>
+                                </div>
                             </div>
                         </div>
                     </form>
@@ -144,6 +107,9 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
                 <button type="button" class="btn btn-primary update-button">パフォーマンスを更新</button>
+
+                <button type="button" class="btn btn-danger delete-button">削除</button>
+
             </div>
         </div>
     </div>
