--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -11,13 +11,13 @@ Aa-12
 <script src="/js/master/places/movieTheaterList.js"></script>
 <%- contentFor('body') %>
 <div class="col-sm-12 form-container search">
-    <form method="post" class="form-horizontal" >
-    <%- include('../../common/master/_hidden') %>
+    <form method="post" class="form-horizontal">
+        <%- include('../../common/master/_hidden') %>
         <div class="menu-group">
         </div>
         <div class="form-group">
             <label for="name" class="col-sm-3 control-label label-title">
-            名称
+                名称
             </label>
             <div class="col-sm-9">
                 <input class="form-control" name="name" id="name" placeholder="" maxlength=64>
@@ -34,7 +34,7 @@ Aa-12
 <div class="col-sm-12 form-container search">
     <div>
         <p id="searchedCount" style="display:none;">
-        検索結果 $searched_count$件
+            検索結果 $searched_count$件
         </p>
     </div>
     <div id="list" class="table-responsive" style="display:none;">
@@ -44,20 +44,26 @@ Aa-12
                     <th>コード</th>
                     <th>名称</th>
                     <th>属性</th>
+                    <th>座席購入上限数</th>
+                    <th>販売開始日</th>
+                    <th>上映後販売終了時間</th>
                 </tr>
             </thead>
             <tbody>
                 <tr id="templateRow" identifier="$identifier$">
                     <td name="branchCode">$branchCode$</td>
                     <td name="name.ja__name.en__kanaName">
-                    $name.ja$<br/>
-                    $name.en$<br/>
-                    $kanaName$<br/>
+                        $name.ja$<br>
+                        $name.en$<br>
+                        $kanaName$<br>
                     </td>
                     <td name="telephone">
-                    $telephone$
+                        $telephone$
                     </td>
-                            <!-- <td name="edit" class="center">
+                    <td name="offers.eligibleQuantity.maxValue">$offers.eligibleQuantity.maxValue$枚</td>
+                    <td name="availabilityStartsGraceTimeInDays">$availabilityStartsGraceTimeInDays$日前</td>
+                    <td name="availabilityEndsGraceTimeInMinutes">$availabilityEndsGraceTimeInMinutes$</td>
+                    <!-- <td name="edit" class="center">
                         <div class="btn-area">
                             <a class="btn btn-list edit" data-toggle="modal" data-target="#myModal">
                                 <span>編集</span>
@@ -68,6 +74,6 @@ Aa-12
             </tbody>
         </table>
     </div>
-    <div id="pager" class="div_pager_parent"></div>  
+    <div id="pager" class="div_pager_parent"></div>
 </div>
 <%- include('../../common/master/_loading') %>
