--- a/views/ticketType/add.ejs
+++ b/views/ticketType/add.ejs
@@ -10,36 +10,32 @@ Aa-5
 <script src="/js/master/ticketTypeAdd.js"></script>
 <%- contentFor('body') %>
 <div class="col-sm-12 form-container">
-    <% /* フォーム */ %>
-    <form method="post" class="form-horizontal" >
+    <form method="post" class="form-horizontal">
         <div class="menu-group">
-            <% /* メッセージ */ %>
-            <% if (message !== '') { %>
-            <p class="error message text-danger panel-body bg-danger"><%= message %></p>
-            <% } %>
+            <%- include('../common/errorMessage') %>
+            <%- include('../common/successMessage') %>
         </div>
 
-        <% /* 券種コード */ %>
         <div class="form-group ">
             <label for="id" class="col-sm-3 control-label label-title">
                 券種コード<font color="red">＊</font>
             </label>
             <div class="col-sm-9">
-                <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64 value=<%= forms.id %>>
+                <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64 value=<%=forms.id
+                    %>>
                 <p class="message">
                     半角64文字以内でご入力ください。
                 </p>
                 <p class="error message text-danger">
-                <% if (errors && errors.id) { %>
+                    <% if (errors && errors.id) { %>
                     <%- errors.id.msg %>
-                <% } %>
+                    <% } %>
                 </p>
             </div>
         </div>
-        
+
         <%- include('form', { forms: forms }) %>
 
-        <% /* 登録ボタン */ %>
         <div class="form-group">
             <div class="btn-area panel-body">
                 <a class="btn btn-ok btn-primary">登録する</a>
@@ -47,11 +43,3 @@ Aa-5
         </div>
     </form>
 </div>
-<script>
-$(function(){
-    $('.btn-ok').on('click', function(){
-        $('form').submit();
-    });
-});
-</script>
-
