--- a/views/ticketTypeGroup/update.ejs
+++ b/views/ticketTypeGroup/update.ejs
@@ -2,34 +2,31 @@
 券種グループマスタ更新
 <%- contentFor('displayId') %>
 Aa-7
+<%- contentFor('styles') %>
+<link rel="stylesheet" href="/css/ticketTypeGroupAddEdit.css">
+<%- contentFor('scripts') %>
+<script src="/js/jquery-ui.js"></script>
+<script src="/js/master/ticketTypeGroup/ticketTypeGroupAddEdit.js"></script>
+
 <%- contentFor('body') %>
 <div class="col-sm-12 form-container">
-    <% /* フォーム */ %>
-    <form method="post" class="form-horizontal" >
+    <form method="post" class="form-horizontal" id="ticketTypeGroupsForm">
         <div class="menu-group">
-            <% /* メッセージ */ %>
-            <% if (message != '') { %>
-            <p class="error message text-danger panel-body bg-danger"><%= message %></p>
-            <% } %>
+            <%- include('../common/errorMessage') %>
+            <%- include('../common/successMessage') %>
         </div>
 
-        <% /* 券種グループコード */ %>
         <input type="hidden" name="id" value="<%= forms.id %>">
 
         <%- include('form', { forms: forms }) %>
 
-        <% /* 登録ボタン */ %>
         <div class="form-group">
-            <div class="btn-area panel-body">
+            <div class="btn-area panel-body pull-left">
                 <a class="btn btn-ok btn-primary">更新する</a>
+            </div>
+            <div class="btn-area panel-body pull-right">
+                <a class="btn btn-delete btn-danger">削除する</a>
             </div>
         </div>
     </form>
 </div>
-<script>
-$(function(){
-    $('.btn-ok').on('click', function(){
-        $('form').submit();
-    });
-});
-</script>
