--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -32,8 +32,14 @@
                         <li class="<%= (displayId === 'Aa-8') ? 'active': ''; %>"><a href="/ticketTypeGroups">
                                         <i class="glyphicon glyphicon-list"></i> 券種グループ検索</a>
                         </li>
-                        <li class="<%= (displayId === 'Aa-16') ? 'active': ''; %>"><a href="/accountTitles/add">
+                        <li class="<%= (displayId === 'Aa-16') ? 'active': ''; %>"><a href="/accountTitles/accountTitleCategory/new">
+                                        <i class="glyphicon glyphicon-plus"></i> 科目分類登録</a>
+                        </li>
+                        <li class="<%= (displayId === 'Aa-16') ? 'active': ''; %>"><a href="/accountTitles/accountTitleSet/new">
                                         <i class="glyphicon glyphicon-plus"></i> 科目登録</a>
+                        </li>
+                        <li class="<%= (displayId === 'Aa-16') ? 'active': ''; %>"><a href="/accountTitles/accountTitle/new">
+                                        <i class="glyphicon glyphicon-plus"></i> 細目登録</a>
                         </li>
                         <li class="<%= (displayId === 'Aa-17') ? 'active': ''; %>"><a href="/accountTitles">
                                         <i class="glyphicon glyphicon-list"></i> 科目検索</a>
