--- a/views/accountTitles/hasCategoryCode/add.ejs
+++ b/views/accountTitles/hasCategoryCode/add.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-科目分類登録
+科目登録
 <%- contentFor('displayId') %>
 Aa-16
 <%- contentFor('styles') %>
@@ -11,8 +11,8 @@ Aa-16
     <% /* フォーム */ %>
     <form method="post" class="form-horizontal">
         <div class="menu-group">
-            <%- include('../common/errorMessage') %>
-            <%- include('../common/successMessage') %>
+            <%- include('../../common/errorMessage') %>
+            <%- include('../../common/successMessage') %>
         </div>
 
         <% /* 登録・更新共通部 */ %>
